...
@OptIn(ExperimentalMaterial3Api::class)
@Preview
@Composable
private fun DiveConfigurationBottomSheetAddPreview() {
    DiveConfigurationBottomSheet(
        sheetState = rememberModalBottomSheetState(skipPartiallyExpanded = true),
        title = "Dive 1",
        initialValue = 60.minutes,
    )
}

@OptIn(ExperimentalMaterial3Api::class)
@Preview
@Composable
private fun DiveConfigurationBottomSheetEditPreview() {
    DiveConfigurationBottomSheet(
        sheetState = rememberModalBottomSheetState(skipPartiallyExpanded = true),
        title = "Dive 2",
        initialValue = 90.minutes,
        onDelete = {},
    )
}

@OptIn(ExperimentalMaterial3Api::class)
...
