...
    }

    ModalBottomSheetScaffold(
        modifier = Modifier.clearFocusOutside(textFieldPositions),
        header = {
            BottomSheetHeader(
                title = if (lockGas) { "Cylinder" } else { "Gas & cylinder" },
                primaryLabel = if (isAdd) { "Add" } else { "Update" },
                primaryEnabled = isStartPressureValid.value,
                onClose = dismiss,
                onPrimary = {
                    val pressureBar = when (unitSystem) {
                        UnitSystem.METRIC -> startPressure!!
...
